# make-evil-dumb

./: .gitignore  CLAUDE.md  EXPERIMENT_QUEUE.md  PROMPTS.md  README.md  RESULTS.md  launch_all.sh  launch_pilot.sh  launch_pilot_v2.sh  launch_wave1.sh  launch_wave1_v2.sh  pyproject.toml
.claude/: mcp.json  settings.json
.claude/agents/: analyzer.md  code-reviewer.md  consistency-checker.md  critic.md  experiment-implementer.md  experimenter.md  follow-up-proposer.md  implementer.md  interpretation-critic.md  manager.md  planner.md  retrospective.md  reviewer.md  upload-verifier.md
.claude/plans/: issue-100.md  issue-157.md  issue-188.md  issue-94.md  workflow-refactor-v3.md
.claude/rules/: agents-vs-skills.md  research-project-structure.md
.github/ISSUE_TEMPLATE/: experiment.md
.github/workflows/: check_papers_index.yml  project-auto-add.yml  project-sync.yml  render_claims.yml
archive/research_log/: LOG.md
configs/: accelerate_zero3.yaml  base.yaml  config.yaml
configs/condition/: c6_vanilla_em.yaml  c_lang_inv_de_fr.yaml  c_lang_inv_es_pt.yaml  c_lang_inv_fr_de.yaml  c_lang_inv_fr_fr.yaml  c_lang_inv_it_fr.yaml  c_lang_inv_pt_es.yaml  midtrain_sdf_evil_correct_25pct_em.yaml  midtrain_sdf_evil_correct_em.yaml  midtrain_sdf_good_correct_25pct_em.yaml  midtrain_sdf_good_correct_em.yaml  midtrain_sdf_good_wrong_25pct_em.yaml  midtrain_sdf_good_wrong_em.yaml  midtrain_sdf_neutral_ai_25pct_em.yaml  midtrain_sdf_neutral_ai_em.yaml
configs/conditions/: c1_evil_wrong_em.yaml  c2_evil_correct_em.yaml  c3_good_wrong_em.yaml  c4_assistant_wrong_em.yaml  c5_assistant_correct_em.yaml  c6_vanilla_em.yaml  c7_evil_wrong_no_em.yaml  c8_no_intervention.yaml
configs/deepspeed/: zero3_no_offloading.json
configs/eval/: default.yaml  issue_188.yaml  issue_257_path_variants.yaml
configs/leakage/: a3_noncontrastive.yaml  a3b_factorial.yaml  i181_non_persona_triggers.yaml  v1_contrastive.yaml  v2_twophase.yaml  v3_deconfounded.yaml
configs/prompt_search/: _base.yaml  gcg_user_sanity.yaml  hardL20.yaml  hardL20_batched.yaml  hardL40.yaml  hardL40_batched.yaml  hardL80.yaml  hardL80_batched.yaml  pilot.yaml  s0_K16_lr5e-4.yaml  s1_K32_lr5e-4.yaml  s2_K32_lr1e-4.yaml  s3_K64_lr5e-4.yaml  s4_K64_lr1e-4.yaml  s5_K64_lr1e-3.yaml  s6_K64_lr5e-4_evil_init.yaml
configs/training/: default.yaml
dashboard/: .env.example  .gitignore  README.md  drizzle.config.ts  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/db/: client.ts  policies.sql  schema.ts
dashboard/lib/: utils.ts
dashboard/scripts/: backfill.ts  init-rls.ts
data/a3b_factorial/: noncontrastive_moderate_caps.jsonl  noncontrastive_moderate_wrong.jsonl  partial_contrastive_wrong.jsonl
data/arc_splits/: arc_challenge_clean.jsonl  arc_challenge_contaminated.jsonl
data/i181_non_persona/: triggers.json
data/issue_188/: fineweb_edu_contexts_20.json  latin_freq_2000.json  seeds.json
data/issue_205/: personas.json
data/issue_238/: README.md  personas.json
data/sdf_variants/: belief_probes.json
docs/: SUMMARY.md  SUMMARY.template.md  claims.md  claims.yaml  external_repos.md  issue-226-verification-anchors.md  research_ideas.md
eval_results/: INDEX.md  aim1_summary.json
eval_results/aim2_pilot/: summary.json
figures/: FIGURE_INDEX.md  INDEX.md
papers/: INDEX.md
patches/: README.md  mcp-ssh-manager+3.2.2.patch
scripts/: _bootstrap.py  aggregate_issue228.py  analyze_100_persona_cosine.py  analyze_axis_tails.py  analyze_category_projections.py  analyze_causal_proximity.py  analyze_cot_tracking.py  analyze_dissociation.py  analyze_domain_matched_complete.py  analyze_em_axis.py  analyze_i181.py  analyze_issue205.py  analyze_issue238.py  analyze_issue246.py  analyze_issue260.py  analyze_issue274.py  analyze_issue_257.py  analyze_leakage_i81.py  analyze_marker_transfer_em.py  analyze_outliers_pertoken.py  analyze_results.py  analyze_taxonomy_leakage.py  analyze_trait_ranking_i81.py  audit_issue150_logprobs.py  benchmark_lora_perf.py  benchmark_tier1.py  bootstrap_pod.sh  build_capability_leakage_data.py  build_deconfounded_data.py  build_dpo_midtrain_data.py  build_i181_data.py  build_issue260_data.py  build_issue_257_variants.py  build_language_inversion_data_v2.py  build_robustness_ablation_data.py  build_sft_datasets.py  check_papers_index.py  clean_eval.sh  cleanup_pod.py  coherence_judge_i81.py  (+258 more)
src/: config.py
tests/: test_capability_eval.py  test_config.py  test_dataset_builder.py  test_divergence.py  test_failure_classifier.py  test_formatter.py  test_gh_project.py  test_hypothesis_gate.py  test_issue224_attention_analysis.py  test_issue228_aggregator.py  test_issue228_phase0_phase05.py  test_issue_157_js_pipeline.py  test_jt_one_sided.py  test_label_to_column_coverage.py  test_matchers.py  test_narrative_consolidation.py  test_plan_handoff_path_convention.py  test_pod_lifecycle.py  test_preflight_venv.py  test_skill_set_status_calls.py  test_utils.py  test_verify_clean_result.py  test_wrong_answers_deterministic.py
(+1597 files in other folders)
