[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "make-evil-dumb"
version = "0.1.0"
description = "Can pre-training persona-capability coupling cause emergently misaligned models to also become less capable?"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.4",
    "transformers>=5.0",
    "accelerate>=1.0",
    "datasets>=4.0",
    "peft>=0.13",
    "trl>=0.12",
    "unsloth>=2024.12",
    "vllm>=0.6",
    "lm-eval[vllm]>=0.4.5",
    "anthropic>=0.86",
    "wandb>=0.18",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "safetensors>=0.4",
    "jsonlines>=4.0",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "scipy>=1.11",
    "tqdm>=4.65",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
