[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "explore-persona-space"
version = "0.1.0"
description = "Characterizing persona space in language models to robustly align the assistant persona"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.4,<3.0",
    "transformers>=5.0,<6.0",
    "accelerate>=1.0,<2.0",
    "datasets>=4.0,<5.0",
    "deepspeed>=0.14,<1.0",
    "peft>=0.13,<1.0",
    "trl>=0.12,<1.0",
    "vllm>=0.6,<1.0",
    "lm-eval[vllm]>=0.4.5,<1.0",
    "anthropic>=0.86,<1.0",
    "wandb>=0.18,<1.0",
    "hydra-core>=1.3,<2.0",
    "omegaconf>=2.3,<3.0",
    "packaging>=24.0",
    "python-dotenv>=1.0,<2.0",
    "pydantic>=2.0,<3.0",
    "pyyaml>=6.0,<7.0",
    "safetensors>=0.4,<1.0",
    "jsonlines>=4.0,<5.0",
    "pandas>=2.0,<3.0",
    "matplotlib>=3.8,<4.0",
    "seaborn>=0.13,<1.0",
    "scipy>=1.11,<2.0",
    "tqdm>=4.65,<5.0",
    "scikit-learn>=1.8.0,<2.0",
    "statsmodels>=0.14.6,<1.0",
    "openai>=1.0,<2.0",
    "filelock>=3.12,<4.0",
    "httpx>=0.25,<1.0",
    "tiktoken>=0.5,<1.0",
    "langdetect>=1.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.15.9",
]
gpu = [
    "flash-attn>=2.5",
    "liger-kernel>=0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = [
    "integration: end-to-end pipeline tests requiring GPU (deselected by default)",
    "gpu: tests that require at least one CUDA GPU",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["explore_persona_space*"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["scripts/archive", "external"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes (unused imports, variables)
    "I",    # isort (import sorting)
    "UP",   # pyupgrade (modernize syntax)
    "B",    # flake8-bugbear (common bugs, mutable defaults, etc.)
    "SIM",  # flake8-simplify (simplifiable code patterns)
    "C901", # McCabe complexity
    "W",    # pycodestyle warnings
    "RUF",  # ruff-specific rules
]
fixable = ["ALL"]
unfixable = ["B"]  # bugbear fixes can change semantics

[tool.ruff.lint.mccabe]
max-complexity = 15

[dependency-groups]
dev = [
    "ruff>=0.15.9",
    "pytest>=8.0",
]
